# jupyterlab-cell-flash

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  demo.ipynb  install.json  package.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
jupyterlab-cell-flash/: __init__.py
jupyterlab_cell_flash/: _version.py
schema/: plugin.json
src/: index.ts
style/: base.css  index.css
