[build-system]
requires = ["jupyter_packaging~=0.10", "jupyterlab~=3.0"]
build-backend = "jupyter_packaging.build_api"

[license]
file="LICENSE"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_cell_flash/labextension/static/style.js"]
ensured-targets = ["jupyterlab_cell_flash/labextension/static/style.js", "jupyterlab_cell_flash/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["*.json", "yarn.lock", ".*", "jupyterlab_cell_flash/labextension/**"]

