[metadata]
name = jupyterlab-cell-flash
description = JupyterLab extension to show a flash effect when a cell is executed
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jeremy Tuloup
url = https://github.com/jtpio/jupyterlab-cell-flash
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, JupyterLab, Widgets, IPython
classifiers =
	Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
